# AI_Parametric_Architect

./: .env.example  .gitignore  Industrial_Architecture_Review.md  Makefile  README.md  Security.md  architecture.md  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: README.md
benchmarks/annotations/: planning-core-reference-1.0.0.json
benchmarks/datasets/: planning-core-1.0.0.json
docs/: ARCHITECTURE_OVERVIEW.md  BENCHMARK_METHODOLOGY.md  CASE_STUDY.md  DEMO_SCRIPT.md  SHOWCASE.md  USER_GUIDE.zh-CN.md
examples/: README.md  invalid_opening.json  invalid_overlap.json  showcase_house.json  valid_simple_house.json
frontend/: .gitignore  README.md  package-lock.json  package.json  vite.config.ts  vitest.config.ts
frontend/app/: design-studio-client.tsx  design-studio.module.css  entity-list.tsx  globals.css  layout.tsx  page.tsx  proposal-plan.tsx  viewer-client.tsx
frontend/tests/: architecture-page.test.tsx  benchmark-contract.test.tsx  build-scene.test.ts  design-studio.test.tsx  dispose.test.ts  entity-list.test.tsx  fixtures.ts  proposal-preview.test.ts  render-ir.test.ts  showcase-world-model.test.ts  source.test.ts
frontend/worker/: index.ts
schemas/: README.md
scripts/: generate_showcase_fixtures.py  generate_world_model_showcase.py  run_showcase.sh  verify_branch_coverage.py  verify_installed_schema.py  verify_wheel.py
src/ai_parametric_architect/: __init__.py  cli.py  composition.py  showcase.py  showcase_generation.py
tests/: README.md  conftest.py
tests/api/: test_api.py  test_showcase_capabilities.py
tests/architecture/: test_authorization_boundaries.py  test_benchmark_boundaries.py  (+8 more)
(+248 files in other folders)
